tooltip overflow bug fixed

--- a/src/Components/Styles/components.scss
+++ b/src/Components/Styles/components.scss
@@ -152,8 +152,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: $default-spacing;
     padding: 12px;
     color: $text-grey;
+
     cursor: pointer;
     &:hover {
       background-color: transparentize($primary, 0.9);
@@ -384,7 +386,6 @@
 .Accordion {
   height: auto;
   width: 100%;
-  overflow: hidden;
   margin: 0 auto 8px;
   &:has(.AccordionContent) .AccordionLabel {
     background-color: lighten($secondary, 15);
@@ -411,7 +412,6 @@
       font-weight: 600;
     }
     span {
-      margin: 0;
       color: $dark-grey;
     }
   }
